--- a/src/Containers/Layout/Navigation/Navigation.module.css
+++ b/src/Containers/Layout/Navigation/Navigation.module.css
@@ -12,21 +12,21 @@
 }
 
 .company{
-    font-size: 2rem;
+    font-size: 1.4rem;
     margin: 1rem;
 }
 
 .navigationList{
     display: flex;
     list-style: none;
-    font-size: 1.4rem;
+    font-size: 1rem;
 }
 
 .link{
     color: inherit;
     text-decoration: none;
     cursor: pointer;
-    padding: .7rem 1rem;
+    padding: .7rem .7rem;
     transition: .3s;
     border-radius: 5px;
 }
@@ -34,5 +34,14 @@
 @media (hover: hover) and (pointer: fine){
     .active:hover{
         color: #e5e5e5;        
+    }
+}
+
+@media(min-width: 500px ){
+    .company{
+        font-size: 2rem;
+    }
+    .navigationList{
+        font-size: 1.4rem;
     }
 }
